feat: Fixed replies create endpoint
